# payments-engine-rs

./: .pre-commit-config.yaml  Cargo.toml  Justfile  README.md
docs/: ARCHITECTURE.md
examples/: chargeback.csv  complete-check.csv  complete.csv  five-decimals.csv  missing-amount.csv  non-unique-ids.csv  not-enough-money.csv  resolve-dispute.csv  transactions.csv  wrong-amount.csv  wrong-scale.csv
src/: domain.rs  dto.rs  engine.rs  error.rs  main.rs  validator.rs
